# Decentralized-Federated-Learning

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
aggregator/: __init__.py  aggregator_node.py  evaluator.py  orchestration.py  scheduler.py
chain/: __init__.py  chain_stub.py  web3_client.py
chain/contracts/: ModelRegistry.sol  Reputation.sol  RewardToken.sol
chain/hardhat/: package.json
client/: __init__.py  cli.py  client_node.py  dp.py  mpc.py  trainer.py
client/client/: datasets.py
dashboard/backend/: main.py  requirements.txt
dashboard/frontend/: index.html  package.json
docker/: aggregator.Dockerfile  client.Dockerfile  dashboard-backend.Dockerfile  docker-compose.yml  hardhat.Dockerfile  ipfs.Dockerfile
hardhat/: hardhat.config.js  package.json
hardhat/contracts/: ModelRegistry.sol  Reputation.sol  RewardToken.sol
hardhat/scripts/: deploy.js  interactions.js
hardhat/test/: ModelRegistry.test.js  Reputation.test.js  RewardToken.test.js
ipfs/: __init__.py  ipfs_client.py
networking/: __init__.py  libp2p_node.py  p2p_stub.py  webrtc_signaling.py
notebooks/: demo_polyscale_fl.ipynb  fairness_analysis.ipynb  ipfs_blockchain_stress_test.ipynb  p2p_live_simulation.ipynb
polyscale_dfl/: init.py
polyscale_dfl/aggregator/: aggregator_node.py  init.py  metrics.py  model_avg.py  scheduler.py  (+1 more)
secure_agg/: __init__.py  bonawitz.py  utils.py
tests/: test_aggregator.py  test_chain.py  test_client.py  test_end_to_end.py  test_ipfs.py  test_networking.py  test_secure_agg.py
(+63 files in other folders)
